--- a/src/layout/form.html
+++ b/src/layout/form.html
@@ -4,7 +4,7 @@
     class="form_control"
     name="name"
     autocomplete="off"
-    placeholder="Search country..."
+    placeholder="Пошук країни..."
     id="search_box"
     required
   />
